Button and Spacing Fixed

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ body {
 }
 
 #parallel-plot-container {
+    padding-top: 450px;
     position: relative;
     height: 700px;
     width: 40vw
@@ -55,15 +56,31 @@ body {
 .btn-secondary:not(:disabled):not(.disabled).active, .btn-secondary:not(:disabled):not(.disabled):active, .show>.btn-secondary.dropdown-toggle {
     color: black;
     background-color: white;
-    border-color: #4e555b;
+    border-color: #333300;
 }
 
 .btn-secondary {
     color: #fff;
     border-color: #6c757d;
-    background-color: purple;
+    background-color:#333300;
 }
 
 #visualizations {
     padding-top: 20px
+}
+
+#processButton {
+    width: 500px;
+    margin-left: 150px;
+    background-color: #333300;
+    border-color: #6c757d;
+    color: white;
+}
+
+h1 {
+    font-size: 60px;
+}
+
+p {
+text-align: center;
 }
